<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  SlimRoms
 *            Team Slimroms (http://www.slimroms.net)
 *
 *  COPYRIGHT Copyright (C) 2013 Slimroms http://www.slimroms.net
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     fronti90
 *  DESCRIPTION: OTACenter: manage your ROM
 *
 *=========================================================================
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:showDividers="beginning" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/short_cut_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/short_cut_download_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/short_cut_download_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            <TextView
                android:id="@+id/short_cut_download_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/short_cut_download_uptodate_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/short_cut_changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/short_cut_changelog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/short_cut_changelog_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/short_cut_changelog_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/short_cut_changelog_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/line3"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/short_cut_download_gapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:text="@string/short_cut_download_gapps_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/short_cut_download_gapps_summary"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>

</ScrollView>
