<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  SlimRoms
 *            Team Slimroms (http://www.slimroms.net)
 *
 *  COPYRIGHT Copyright (C) 2013 Slimroms http://www.slimroms.net
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     fronti90
 *  DESCRIPTION: MahdiCenter: manage your ROM
 *
 *=========================================================================
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="70dp"
    android:paddingRight="70dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:divider="@drawable/list_divider"
        android:orientation="vertical"
        android:showDividers="beginning" >

        <TextView
            android:id="@+id/center_sum"
            style="@style/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/center_summary" />

        <TextView
            android:id="@+id/line6"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:fontFamily="Sans-Serif-Light"
            android:gravity="center_horizontal"
            android:textColor="#FF2D2D2D" />

        <LinearLayout
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_website" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Sans-Serif-Light"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/website_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF2D2D2D" />
            </LinearLayout>

            <TextView
                android:id="@+id/website_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif-Light"
                android:paddingLeft="10dp"
                android:text="@string/website_summary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF2D2D2D" />
        </LinearLayout>

        <TextView
            android:id="@+id/line7"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:fontFamily="Sans-Serif-Light"
            android:gravity="center_horizontal"
            android:textColor="#FF2D2D2D" />

        <LinearLayout
            android:id="@+id/bugreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_website" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Sans-Serif-Light"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/bugreport"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF2D2D2D" />
            </LinearLayout>

            <TextView
                android:id="@+id/bugreport_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif-Light"
                android:paddingLeft="10dp"
                android:text="@string/bugreport_summary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF2D2D2D" />
        </LinearLayout>

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_donate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Sans-Serif-Light"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/donate_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF2D2D2D" />
            </LinearLayout>

            <TextView
                android:id="@+id/website_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif-Light"
                android:paddingLeft="10dp"
                android:text="@string/donate_summary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF2D2D2D" />
        </LinearLayout>

        <TextView
            android:id="@+id/line4"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:fontFamily="Sans-Serif-Light"
            android:gravity="center_horizontal"
            android:textColor="#FF2D2D2D" />

        <LinearLayout
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_github" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Sans-Serif-Light"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/source_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF2D2D2D" />
            </LinearLayout>

            <TextView
                android:id="@+id/website_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Sans-Serif-Light"
                android:paddingLeft="10dp"
                android:text="@string/source_summary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF2D2D2D" />
        </LinearLayout>

        <TextView
            android:id="@+id/line5"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:fontFamily="Sans-Serif-Light"
            android:gravity="center_horizontal"
            android:textColor="#FF2D2D2D" />
    </LinearLayout>

</ScrollView>