<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  SlimRoms
 *            Team Slimroms (http://www.slimroms.net)
 *
 *  COPYRIGHT Copyright (C) 2013 Slimroms http://www.slimroms.net
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     fronti90, mnazim, tchaari, kufikugel
 *  DESCRIPTION: OTACenter keeps our rom up to date
 *
 *=========================================================================
 *
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/euphoriaOta"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.03"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/deviceTitleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp" >

            <TextView
                android:id="@+id/deviceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/device_title"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deviceTitle"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/deviceCodename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deviceName"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/curVerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deviceCodename"
                android:layout_marginTop="8dip"
                android:text="@string/curVer"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/curVer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/curVerTitle"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/curFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/curVer"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/upToDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/curFile"
                android:layout_marginTop="8dip"
                android:text="@string/update_file_title"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/upToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/curFile"
                android:layout_marginTop="8dip"
                android:layout_toRightOf="@id/upToDateTitle"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                android:textColor="?android:attr/textColorSecondary" />

        </RelativeLayout>

        <TextView
            android:id="@+id/line"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:gravity="center_horizontal" />

        <RelativeLayout
            android:id="@+id/linksFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="19.74" >

            <include layout="@layout/floating_action_button" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
